Store colored rows; avoid clear pts + many pt objs